# scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  shell.nix
delatrain/: algorithm.py  main.py  routing.py  utils.py
delatrain/data_sources/: osm.py  rozklad_pkp.py
delatrain/structures/: paths.py  position.py  stations.py  trains.py
delatrain_scraper/: __main__.py  algorithm.py  main.py  structures.py
delatrain_scraper/data_sources/: osm.py  rozklad_pkp.py
delatrain_scraper/structures/: paths.py  position.py  stations.py  trains.py
