[project]
name = "delatrain"
version = "0.0.4"
authors = [{ name = "Kacper0510", email = "kacper.b.wojciuch@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "osmnx>=2.0.6",
    "jsonpickle>=4.1.1",
    "scikit-learn>=1.7.2",
]

[tool.setuptools]
packages = ["delatrain"]
